# django-modern-rpc

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHAGELOG.md  CHAGELOG.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO  noxfile.py  pyproject.toml  pytest.ini  requirements.doc.txt  requirements.txt  run_tests.py  setup.py  sonar-project.properties  tox.ini
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: benchmarks.yml  code-analysis.yml  codeql-analysis.yml  codeql.yml  default.yml  publish-on-pypi.yml  publish.yml  tests-and-codestyle.yml  tests.yml  unit-tests.yml
.junie/: guidelines.md
docs/: .gitignore  Makefile  authentication.rst  backends.rst  changelog.rst  conf.py  contribution_guide.rst  data_types_support.rst  error_handling.rst  faq.rst  index.rst  make.bat  migration_guide.rst  procedure_registration.rst  quickstart.rst  references.rst  security.rst  server.rst  settings.rst  tasks.md
docs/_static/: custom.css
docs/_templates/: donation.html
docs/advanced/: authentication.rst  generated_doc.rst  implementation_details.rst  security.rst
docs/basics/: entrypoints.rst  error_handling.rst  quickstart.rst  register_procedure.rst  server.rst  settings.rst
docs/config/: authentication.rst  backends.rst  error_handling.rst  generated_doc.rst  procedure_registration.rst  server.rst  settings.rst
docs/contribute/: contribute.rst  setup_environment.rst
docs/drafts/: data_types_support.rst  entrypoints.rst  faq.rst  implementation_details.rst  new_toc.rst  security.rst
docs/misc/: changelog.rst  contributing.rst  faq.rst  migration_guide.rst  proto_refs.rst  security.rst
docs/source/: biblio.rst  conf.py  configuration.rst  contribute.rst  error_handling.rst  exceptions.rst  index.rst  install_and_config.rst  methods_registration.rst  quickstart.rst  rpc_view.rst
docs/source/1_standard_config/: index.rst  methods_registration.rst  provide_documentation.rst  settings.rst
docs/source/2_advanced_features/: authentication.rst  data_types_support.rst  error_handling.rst  index.rst  system_methods.rst
docs/source/_static/: custom.css
docs/source/advanced/: authentication.rst  data_types_support.rst  define_rpc_methods.rst  error_handling.rst  index.rst  tips_and_tricks.rst
docs/source/advanced_topics/: index.rst  system_methods.rst
docs/source/basic_usage/: configuration.rst  define_rpc_methods.rst  (+4 more)
legacy-test/: test_initialization.py
legacy-test/functional/: conftest.py  test_base.py  test_errors.py  test_multicall_batch.py  test_protocol_specific.py  test_security.py  test_types.py  test_view.py
legacy-test/testsite/: .gitignore  settings.py  urls.py
modernrpc/: __init__.py  apps.py  auth.py  compat.py  config.py  constants.py  core.py  exceptions.py  handler.py  helpers.py  introspection.py  modernrpc_settings.py  server.py  system_methods.py  system_procedures.py  type_repr.py  types.py  typing.py  utils.py  views.py
modernrpc/auth/: __init__.py  basic.py
modernrpc/backends/: _orjson.py  base.py  base_json.py  builtin_json.py  builtin_xmlrpc.py  simple_json.py  xml2dict.py
modernrpc/conf/: __init__.py  default_settings.py
modernrpc/config/: __init__.py  default_settings.py
modernrpc/handlers/: __init__.py  base.py  jsonhandler.py  xmlhandler.py
modernrpc/jsonrpc/: handler.py
modernrpc/tests/: __init__.py  conftest.py  dummy_jsonrpc_client.py  mocks.py  test_auth_helpers.py  test_auth_jsonrpc.py  test_auth_xmlrpc.py  test_authentication_system.py  test_basic.py  test_compat.py  test_coverage.py  test_entry_points.py  test_helpers.py  test_init.py  test_jsonrpc.py  test_jsonrpc_auth.py  test_jsonrpc_errors.py  test_jsonrpc_specific_features.py  test_jsonrpc_types.py  test_logging.py  test_methods_register.py  test_multicall.py  test_multicall_and_batch_requests.py  test_registry.py  test_rpc_method_class.py  test_rpc_method_object.py  test_types.py  test_utils.py  test_xmlrpc.py  test_xmlrpc_auth.py  test_xmlrpc_errors.py  test_xmlrpc_types.py
modernrpc/xmlrpc/: handler.py
tests/: __init__.py  __main__.py  conftest.py  helpers.py  stubs.py  test_auth_helpers.py  test_authentication.py  test_backends_json.py  test_backends_xml.py  test_docstring_parser.py  test_e2e.py  test_error_handlers.py  test_error_handling.py  test_handlers.py  test_helpers.py  test_html_doc.py  test_introspection.py  test_jsonrpc_specific_features.py  test_misc.py  test_multicall_and_batch_requests.py  test_namespace.py  test_proc_wrapper.py  test_registry.py  test_security.py  test_server.py  test_server_namespace.py  test_type_repr.py  test_view.py  test_views.py  test_wrapper.py
tests/auth/: conftest.py  test_helpers.py  test_jsonrpc.py  test_xmlrpc.py
tests/backends/: test_jsonrpc.py  test_xmlrpc.py
tests/benchmarks/: bench_backends.py  conftest.py  test_benchmarks.py
tests/core/: conftest.py  test_basic.py  test_entry_points.py  test_init.py  test_registry.py  test_rpc_method_class.py  test_types.py  test_utils.py
tests/errors/: test_jsonrpc.py  test_xmlrpc.py
tests/functional/: conftest.py  test_auth.py  test_authentication.py  test_base.py  test_errors.py  test_multicall_batch.py  test_protocol_specific.py  test_security.py  test_types.py  test_view.py
tests/misc/: test_compat.py  test_helpers.py  test_jsonrpc_specific_features.py  test_multicall_and_batch_requests.py
tests/project/: rpc.py  settings.py  urls.py
tests/testsite/: settings.py  urls.py
tests/unit/: stubs.py  test_auth_helpers.py  test_handlers.py  test_helpers.py  test_html_doc.py  test_initialization.py  test_rpc_method_class.py  test_view.py
tests/views/: conftest.py  test_async_view_jsonrpc.py  test_async_view_xmlrpc.py  test_jsonrpc_async.py  test_jsonrpc_sync.py  test_sync_view_jsonrpc.py  test_sync_view_xmlrpc.py  test_xmlrpc_async.py  test_xmlrpc_sync.py
testsite/: settings.py  urls.py
testsite/rpc_methods_stub/: __init__.py  generic.py  not_decorated.py  specific_protocol.py  specific_types.py
(+70 files in other folders)
