# ------------------------------------------------------------------
# |                        Project config
# ------------------------------------------------------------------
[project]
name = "django-modern-rpc"
version = "2.0dev0"
description = "Simple and powerful RPC server for your Django project"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Antoine Lorence", email = "antoine.lorence@gmail.com" }
]
repository = "https://github.com/alorence/django-modern-rpc"
documentation = "https://django-modern-rpc.readthedocs.io"

classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "django >= 3.2",
]
requires-python = ">=3.8"

[project.optional-dependencies]
docutils = [
    "docutils >= 0.19",
]
markdown = [
    "markdown >= 3.4",
]
defusedxml = [
    "defusedxml",
]

[project.urls]
"Bug Tracker" = "https://github.com/alorence/django-modern-rpc/issues"
"Demo" = "https://modernrpc.onrender.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modernrpc"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".*",
    "*.ini",
    "*.lock",
    "noxfile.py",
    "requirements*",
    "tests",
    "docs",
]

# ------------------------------------------------------------------
# |                        Dev dependencies
# ------------------------------------------------------------------
[tool.uv]
default-groups = ["dev", "tests"]

[dependency-groups]
dev = [
    "ruff ~= 0.11",
    "jsonrpcclient ~= 4.0.3",
    "requests",
    "docutils >= 0.19",
    "markdown >= 3.4",
    "defusedxml",
    "simplejson>=3.19",
    "xmltodict>=0.14.0",
    "lxml>=5.3",
    "orjson>=3.10.15",
    "python-rapidjson>=1.20",
]
tests = [
    "pytest",
    "pytest-django",
    "pytest-sugar",
    "pytest-cov",
    "pytest-xdist",
    "pytest-benchmark>=4.0.0",
]
type-checking = [
    "mypy",
    "django-stubs",
    "types-docutils",
    "types-markdown",
    "types-requests",
    "types-simplejson",
    "types-xmltodict",
]
docs = [
    "sphinx >= 8.2; python_version >= '3.11'",
    "sphinx >= 6.2; python_version < '3.11'",
    "sphinx-book-theme >= 1.1.0; python_version >= '3.9'",
    "sphinx-book-theme ~= 1.0; python_version < '3.9'",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-inline-tabs>=2023.4.21",
]

# ------------------------------------------------------------------
# |                        Pytest settings
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "--benchmark-autosave"

# pytest-django settings
DJANGO_SETTINGS_MODULE = "tests.project.settings"
FAIL_INVALID_TEMPLATE_VARS = true

# ------------------------------------------------------------------
# |                      Coverage settings
# ------------------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = true

include = [
    "modernrpc/*",
]
omit = [
  "modernrpc/apps.py",
  "modernrpc/compat.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Such block is used only when mypy is ran
  "if TYPE_CHECKING:",
]


# ------------------------------------------------------------------
# |                        Mypy settings
# ------------------------------------------------------------------
[tool.mypy]
exclude = [
    'noxfile\.py',
    '^tests/.+$',
    '^legacy-test/.+$',
    '^docs/.+$',
]
[[tool.mypy.overrides]]
module = [
    "defusedxml",
    "defusedxml.xmlrpc",
]
ignore_missing_imports = true

# ------------------------------------------------------------------
# |                        Ruff settings
# ------------------------------------------------------------------
[tool.ruff]
line-length = 120
extend-exclude = ["legacy-test"]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
# List of rules currently enabled.
# Docs: https://beta.ruff.rs/docs/rules/
select = [
    "F", # pyflakes
    "E", "W", # pycodestyle Errors & warnings
    "C90", # mccabe: functions complexity
    "I", # isort
    #    "N", # pep8-naming
    #    "D", # pydocstyle
    "UP", # pyupgrade
    "YTT", # flake8-2020
    #     "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    #    "BLE", # flake8-blind-except
    #    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "A", # flake8-builtins
    #    "COM", # flake8-commas
    # "CPY", # flake8-copyright
    "C4", # flake8-comprehensions
    #    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    #    "EM", # flake8-errormsg
    "EXE", # flake8-executable
    "FA", # flake8-future-annotations
    #    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    #    "G", # flake8-logging-format
    #    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    #    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    #    "TD", # flake8-todos
    #    "FIX", # flake8-fixme
    #    "ERA", # eradicate
    #    "PD", # pandas-vet
    "PGH", # pygrep-hooks
    "PLC", # PyLint (Convention)
    "PLE", # PyLint (Error)
    # "PLR", # PyLint (Refactor)
    "PLW", # PyLint (Warning)
    #    "TRY", # tryceratops
    "FLY", # flynt
    #    "NPY", # Numpy-specific
    "AIR", # Airflow
    "PERF", # Perflint
    # "FURB", # refurb
    "LOG", # flake8-logging
    "RUF", # Ruff specific rules
]

[tool.ruff.lint.per-file-ignores]
# Some issues are irrelevant in tests
"tests/*" = ["PLR2004", "PLR0913", "PLC1901", "S"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
# TBD
