# ------------------------------------------------------------------
# |                        Project config
# ------------------------------------------------------------------
[project]
name = "django-modern-rpc"
version = "2.0.a3"
description = "Simple and powerful RPC server for your Django project"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"

authors = [
    { name = "Antoine Lorence", email = "antoine.lorence@gmail.com" }
]
repository = "https://github.com/alorence/django-modern-rpc"
documentation = "https://django-modern-rpc.readthedocs.io"

classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

requires-python = ">=3.8"
dependencies = [
    "django >= 3.2",
    "defusedxml >= 0.7.1",
    "typing-extensions >= 4.12.0 ; python_version < '3.11'"
]

[project.optional-dependencies]
docutils = ["docutils"]
markdown = ["markdown"]
orjson = ["orjson"]
simplejson = ["simplejson"]
rapidjson = ["python-rapidjson"]
xmltodict = ["xmltodict"]
lxml = ["lxml"]

[project.urls]
"Bug Tracker" = "https://github.com/alorence/django-modern-rpc/issues"
"Demo" = "https://modernrpc.onrender.com"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "modernrpc"

# ------------------------------------------------------------------
# |                        Dev dependencies
# ------------------------------------------------------------------
[tool.uv]
default-groups = ["dev", "tests"]

[dependency-groups]
dev = [
    "ruff ~= 0.14",
    "jsonrpcclient ~= 4.0.3",
    "requests",
    "docutils >= 0.19",
    "markdown >= 3.5",
    "simplejson >= 3.19",
    "xmltodict < 1.0; python_version <= '3.8'",
    "xmltodict >= 1.0; python_version > '3.8'",
    "lxml >= 5.3",
    "orjson >= 3.10",
    "python-rapidjson >= 1.20",
]
tests = [
    "pytest",
    "pytest-django",
    "pytest-sugar",
    "pytest-cov",
    "pytest-xdist",
    "pytest-benchmark >= 4.0.0",
    "pytest-asyncio",
]
type-checking = [
    "mypy",
    "django-stubs",
    "lxml-stubs",
    "types-defusedxml",
    "types-docutils",
    "types-markdown",
    "types-requests",
    "types-simplejson",
    "types-xmltodict",
]
docs = [
    "sphinx >= 6.2; python_version < '3.11'",
    "sphinx >= 8.2; python_version >= '3.11'",
    "sphinx-book-theme ~= 1.0; python_version < '3.9'",
    "sphinx-book-theme >= 1.1.0; python_version >= '3.9'",
    "sphinx-autobuild",
    "sphinx-design>=0.5.0",
    "sphinx-inline-tabs>=2023.4.21",
    "myst-parser",
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


# ------------------------------------------------------------------
# |                        Pytest settings
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "--benchmark-autosave --benchmark-disable"

# pytest-django settings
DJANGO_SETTINGS_MODULE = "tests.project.settings"
FAIL_INVALID_TEMPLATE_VARS = true

# pytest-asyncio (asyncio is the only async framework for now, set to auto mode)
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# ------------------------------------------------------------------
# |                      Coverage settings
# ------------------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = true

source = [
    "modernrpc/",
]
omit = [
  "modernrpc/apps.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Such block is used only when mypy is ran
  "if TYPE_CHECKING:",
]


# ------------------------------------------------------------------
# |                        Mypy settings
# ------------------------------------------------------------------
[tool.mypy]
exclude = [
    'noxfile\.py',
    '^tests/.+$',
    '^docs/.+$',
]

# ------------------------------------------------------------------
# |                        Ruff settings
# ------------------------------------------------------------------
[tool.ruff]
line-length = 120

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
# List of rules currently enabled.
# Docs: https://beta.ruff.rs/docs/rules/
select = [
    "F", # pyflakes
    "E", "W", # pycodestyle Errors & warnings
    "C90", # mccabe: functions complexity
    "I", # isort
    #    "N", # pep8-naming
    #    "D", # pydocstyle
    "UP", # pyupgrade
    "YTT", # flake8-2020
    #     "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    #    "BLE", # flake8-blind-except
    #    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "A", # flake8-builtins
    #    "COM", # flake8-commas
    # "CPY", # flake8-copyright
    "C4", # flake8-comprehensions
    #    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    #    "EM", # flake8-errormsg
    "EXE", # flake8-executable
    "FA", # flake8-future-annotations
    #    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    #    "G", # flake8-logging-format
    #    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    #    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    #    "TD", # flake8-todos
    #    "FIX", # flake8-fixme
    "ERA", # eradicate
    #    "PD", # pandas-vet
    "PGH", # pygrep-hooks
    "PLC", # PyLint (Convention)
    "PLE", # PyLint (Error)
    # "PLR", # PyLint (Refactor)
    "PLW", # PyLint (Warning)
    #    "TRY", # tryceratops
    "FLY", # flynt
    #    "NPY", # Numpy-specific
    "AIR", # Airflow
    "PERF", # Perflint
    # "FURB", # refurb
    "LOG", # flake8-logging
    "RUF", # Ruff specific rules
]

[tool.ruff.lint.per-file-ignores]
# Some issues are irrelevant in tests
"tests/*" = [
    "S"  # Disable flake8-bandit in the "tests" directory: all alerts are mainly false positive
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
# TBD
